--- a/src/HHome.css
+++ b/src/HHome.css
@@ -13,20 +13,26 @@
 	
 } 
 
-.background { 
-	background: rgb(192, 221, 255); 
+ .background { 
+	
+	 background: linear-gradient(rgb(192, 213, 234),rgb(77, 69, 223)); 
+	
 	background-blend-mode: darken; 
 	background-size: cover; 
-} 
+}  
 
 .footer { 
-background-color: #000; 
+background-color: rgb(36, 36, 36); 
+    height: 250px;
+	 text-align: center;
 } 
 
 .nav-list { 
 	width: 70%; 
 	display: flex; 
 	align-items: center; 
+	font-family: Arial, Helvetica, sans-serif;
+	font-weight: bold;
 } 
 
 
@@ -42,12 +48,20 @@ background-color: #000;
 
 .nav-list li a { 
 	text-decoration: none; 
-	color: #000; 
+	color:white;
+	
 } 
 
 .nav-list li a:hover { 
-	color: grey; 
+	/* color:rgb(180, 174, 174); */
+	color: rgb(34, 34, 106);
+	 text-decoration:underline; 
 } 
+.nav-list li :hover{
+	color: beige;
+}
+
+
 
 .rightnav { 
 	width: 30%; 
@@ -58,17 +72,26 @@ background-color: #000;
 margin-left: 20px; 
 height: 33px; 
 width: 90px; 
-	color: #fff; 
-background-color: orange; 
+	color: blue; 
+	font-weight: bold;
+
+
+background-color: #fff;
 	cursor: pointer; 
 } 
+.btn :hover{
+	color: gray;
+}
 .btm{ 
 margin-left: 20px; 
 height: 33px; 
 width: 90px; 
-	color: #fff; 
-background-color: green;
+	
+	color: blue;
+	background: white;
+	font-weight: bold;
 	cursor: pointer; 
+	
 } 
 
 .btn-sm { 
@@ -77,7 +100,7 @@ background-color: green;
 } 
 
 
-
+	
 .text-footer { 
 	text-align: center; 
 	padding: 30px 0; 
@@ -98,43 +121,202 @@ background-color: green;
 	border: 1px solid black;
 
 }
-.cimg{
-	background-color: olivedrab;
-	height: 600px;
-	width:700px;
-	display: flex;
-	flex-direction: column;
-	/* background-image: url("D:\Pictures\Saved Pictures\banking-payment-banner-set_98292-1129.jpg"); */
-	background-size: 700px 600px;
-	
-}
+
 .mc{
 	display: flex;
 	flex-direction: row;
 	gap: 40px; 
 	flex-wrap: wrap;
-	padding: 10px;
+	margin-top: 50px;
+	margin-left:80px ;
+	gap: 50PX;
+	padding: 0 30px 60px;
+
+}
+.mc :hover{
+	box-shadow: 0px 8px 16px 0px rgba(141, 141, 141, 0.9);
+	transform: scale(1.045);
+}
+.nc{
+	display: flex;
+	flex-direction: row;
+	gap: 50px; 
+	flex-wrap: wrap;
+	margin-top: 50px;
+	margin-left: 80px;
+	text-align: center;
+
+	padding: 0 30px 60px;
+	
 	
 }
-.blogo{
-	width: auto;
-	height: 200px;
-	background-color: blue;
 
+
+
+.clogo{
+	
+	display: flex;
+	flex-direction: column;
+	background-color: #000;
+	width: 400px;
+	height: 500px;
+	
+	background: linear-gradient(rgb(192, 213, 234),rgb(15, 10, 149));
+	
+	border-top-right-radius:4%;
+	border-top-left-radius: 4%;
+	border-bottom-left-radius: 4%;
+	border-bottom-right-radius: 4%;
+
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.9);
+	/* pointer-events: none; */
+}
+
+
+
+.slogo{
+	display: flex;
+	flex-direction: row;
+	background-color: #000;
+	width: 400px;
+	height: 500px;
+	
+}
+.offer{
+	margin-top: 100px;
+	text-align: center;
+	position: relative;
+	
+	
+}
+
+h1{
+	color: white;
+	font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 p{
-	font-size: 120%;
+	color:white;
+	pointer-events: none;
 }
-b{
-	font-size: 150%;
+
+.body{
+	
+	
+	background: linear-gradient(rgb(192, 213, 234),rgb(15, 10, 149));
 }
-.cw{
-	font-size: 300%;
-	font-family: Georgia, 'Times New Roman', Times, serif;
-	color: green;
+.aimg{
+	margin-top: 100px;
+	background-image: url("https://pic.onlinewebfonts.com/thumbnails/animations_546512.svg?width=6");
+pointer-events: none;
+	width: 100px;
+	height: 100px;
+	margin-left: 150px;
+	margin-top: 90px;	
+}
+.bimg{
+	margin-top: 100px;
+	background-image: url("https://pic.onlinewebfonts.com/thumbnails/animations_508747.svg?width=6");
+	width: 100px;
+	height: 100px;
+	margin-left: 150px;
+	margin-top: 90px;	
+	pointer-events: none;
+}
+.cimg{
+	margin-top: 100px;
+	background-image: url("https://pic.onlinewebfonts.com/thumbnails/icons_187930.svg?width=6");
+	width: 100px;
+	height: 100px;
+	margin-left: 150px;
+	margin-top: 90px;
+	pointer-events: none;
+}
+h3{
+	color: white;
+	text-align: center;
+	margin-top: 15px;
+	pointer-events: none;
+}
+ul{
+	margin-top: 15px;
+	text-align: left;
+	color: white;
+    font-size:large;
+	list-style:circle;
+	margin-left: 70px;
 
 }
-.bn{
-	 color:blue;
+
+li{
+	list-style-position:inside;
 }
+button:hover{
+color: white;
+
+
+}
+.dropcontent {
+	display: none;
+	position: absolute;
+	background-color: white;
+	min-width: 200px;
+	height: 100px;
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.5);
+	z-index: 1;
+	border-radius: 8px;
+	text-align: center;
+	font-family:'Times New Roman', Times, serif;
+  }
+  .dropbtn {
+
+	
+	color: white;
+	padding: 16px;
+	font-size: 16px;
+	border: none;
+  }
+  .dropdown {
+	position: relative;
+
+
+  }
+  .dropcontent a {
+	color:blue;
+	padding: 12px 16px;
+	text-decoration: none;
+	display: block;
+  }
+  .dropcontent a:hover {
+	background-color: #ddd;
+	background-color: rgb(113, 113, 221);
+	color: white;
+}
+
+.dropdown:hover .dropcontent {display: block;
+	color: black;
+}
+.bt{
+	height: 33px;
+	width: 110px;
+	background-color: #fff;
+	color: red;
+	font-weight: bold;
+	font-family:'Times New Roman', Times, serif;
+}
+.bt :hover{
+	color: white;
+	background-color: red;
+
+}
+.ulh {
+	pointer-events: none;
+
+}
+
+.row{
+	margin-bottom: 10px;
+	
+	
+}
+
 
